sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: not found: value i
    while(i != 0) {
          ^AlgInsertionSort:7: error: not found: value plus
      if(plus(v, i - 1))
         ^AlgInsertionSort:7: error: not found: value i
      if(plus(v, i - 1))
                 ^AlgInsertionSort:8: error: not found: value i
        echange(i - 1, i)
                ^AlgInsertionSort:8: error: not found: value i
        echange(i - 1, i)
                       ^AlgInsertionSort:9: error: not found: value i
      i -= 1
      ^AlgInsertionSort:11: error: not found: value i
    echange(v, i)
               ^