sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v:Int = 0
  for (i <- 1 to getNombreValeurs - 1)
  	v = getValeur(i)
  	while(i != 0) {
      if(plus(v, i - 1))
      	echange(i - 1, i)
      i -= 1
    }
  	echange(v, i)
}